// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag service #getLatestAndSecondLatestTag Boom scenario Latest tag is not in the targeting branch should throw err 1`] = `"Latest tag doesn't contain target branch. Target branch develop"`;

exports[`Tag service #getLatestAndSecondLatestTag Boom scenario Latest tag is not matching the regex should throw err 1`] = `"Latest tag doesn't match with the regex. Target tag regex /^[0-9]+.[0-9]+.[0-9]+$/"`;

exports[`Tag service #getLatestAndSecondLatestTag Optional scenario Only one tag should call findBranchRefsByProjectIdAndSha 1`] = `
Array [
  Array [
    "123456",
    "59395c05c18b9c8904853715d4136921de0b48f1",
  ],
]
`;

exports[`Tag service #getLatestAndSecondLatestTag Optional scenario Only one tag should call findRepoByProjectId 1`] = `
Array [
  "123456",
]
`;

exports[`Tag service #getLatestAndSecondLatestTag Optional scenario Only one tag should call findTagsByProjectId 1`] = `
Array [
  "123456",
]
`;

exports[`Tag service #getLatestAndSecondLatestTag Optional scenario Only one tag should log info 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Latest tag is v1.0.0",
    ],
    Array [
      "No more tag is found. Assuming project creation date is the start date",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Tag service #getLatestAndSecondLatestTag Optional scenario Only one tag should return latest and second latest tag 1`] = `
Array [
  Object {
    "commit": Object {
      "author_email": "john@example.com",
      "author_name": "John Smith",
      "authored_date": "2012-05-25T04:42:42Z",
      "committed_date": "2012-05-25T04:42:42Z",
      "committer_email": "jack@example.com",
      "committer_name": "Jack Smith",
      "created_at": "2012-05-25T04:42:42Z",
      "id": "59395c05c18b9c8904853715d4136921de0b48f1",
      "message": "Initial commit",
      "parent_ids": Array [
        "2a4b78934375d7f53875269ffd4f45fd83a84ebd",
      ],
      "short_id": "de0b48f1",
      "title": "Initial commit",
    },
    "message": null,
    "name": "v1.0.0",
    "release": Object {
      "description": "Amazing release. Wow",
      "tag_name": "1.0.0",
    },
    "target": "59395c05c18b9c8904853715d4136921de0b48f1",
  },
  Object {
    "commit": Object {
      "committed_date": "2012-05-26T04:42:42Z",
    },
  },
]
`;

exports[`Tag service #getLatestAndSecondLatestTag Sunny scenario should call findBranchRefsByProjectIdAndSha 1`] = `
Array [
  Array [
    "123456",
    "ec0b4f0b5c90ed0fa911a2972ccc452641b31563",
  ],
  Array [
    "123456",
    "ec0b4f0b5c90ed0fa911a2972ccc452641b31563",
  ],
]
`;

exports[`Tag service #getLatestAndSecondLatestTag Sunny scenario should call findTagsByProjectId 1`] = `
Array [
  "123456",
]
`;

exports[`Tag service #getLatestAndSecondLatestTag Sunny scenario should log info 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Latest tag is v1.1.0",
    ],
    Array [
      "Found the second latest tag on page 1. The second latest tag is v1.0.0",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Tag service #getLatestAndSecondLatestTag Sunny scenario should return latest and second latest tag 1`] = `
Array [
  Object {
    "commit": Object {
      "author_email": "john@example.com",
      "author_name": "John Smith",
      "authored_date": "2012-05-27T04:42:42Z",
      "committed_date": "2012-05-27T04:42:42Z",
      "committer_email": "jack@example.com",
      "committer_name": "Jack Smith",
      "created_at": "2012-05-27T04:42:42Z",
      "id": "ec0b4f0b5c90ed0fa911a2972ccc452641b31563",
      "message": "Initial commit",
      "parent_ids": Array [
        "2a4b78934375d7f53875269ffd4f45fd83a84ebe",
      ],
      "short_id": "41b31563",
      "title": "Initial commit",
    },
    "message": null,
    "name": "v1.1.0",
    "release": Object {
      "description": "Amazing release. Wow",
      "tag_name": "1.1.0",
    },
    "target": "ec0b4f0b5c90ed0fa911a2972ccc452641b31563",
  },
  Object {
    "commit": Object {
      "author_email": "john@example.com",
      "author_name": "John Smith",
      "authored_date": "2012-05-25T04:42:42Z",
      "committed_date": "2012-05-25T04:42:42Z",
      "committer_email": "jack@example.com",
      "committer_name": "Jack Smith",
      "created_at": "2012-05-25T04:42:42Z",
      "id": "59395c05c18b9c8904853715d4136921de0b48f1",
      "message": "Initial commit",
      "parent_ids": Array [
        "2a4b78934375d7f53875269ffd4f45fd83a84ebd",
      ],
      "short_id": "de0b48f1",
      "title": "Initial commit",
    },
    "message": null,
    "name": "v1.0.0",
    "release": Object {
      "description": "Amazing release. Wow",
      "tag_name": "1.0.0",
    },
    "target": "59395c05c18b9c8904853715d4136921de0b48f1",
  },
]
`;
